app/styles/components/classroom_lessons/_script_items.scss
.student-submission-item {
  border-radius: 3px;

  border: solid 1px #e9e9e9;

  .student-submission-item-header {
    height: 60px;
    padding: 18px 20px;
    background-color: #fafafa;
    font-size: 16px;
    border-bottom: solid 1px #e9e9e9;
    .show-remaining-students-button, .show-differences-button {
      font-size: 16px;
      font-weight: 600;
      color: #00c2a2;
      cursor: pointer;
    }
    .show-differences-button {
      float: right;
    }
  }
  .no-student-submissions {
    text-align: center;
    font-size: 16px;
    color: #969696;
    padding: 30px 90px;
  }
  .student-submission-item-table {
    padding: 15px 20px;

    .answer-number {
      width: 23px;
      height: 23px;
      background-color: #3adfbb;
      display: block;
      text-align: center;
      border-radius: 20px;
      padding-top: 2px;
      font-size: 16px;
      font-weight: bold;
      color: #ffffff;
    }

    table {
      thead {
        tr th {
          cursor: pointer;
          font-size: 12px;
          font-weight: 600;
          text-align: left;
          color: #c0c0c0;
          &:nth-of-type(1) {
            width: 20%;
          }
          &:nth-of-type(2) {
            width: 7%;
          }
          &:nth-of-type(3) {
            width: 41%;
          }
          &:nth-of-type(4) {
            width: 8%;
          }
          &:nth-of-type(5) {
            width: 14%;
          }
          &:nth-of-type(7) {
            width: 11%;
          }
          &:nth-of-type(4), &:nth-of-type(5), &:nth-of-type(7) {
            text-align: center;
          }
          p {
            cursor: pointer;
            color: #00c2a2;
            margin-top: 5px;
            height: 14px;
          }
          i {
            margin-left: 4px;
            font-size: 14px;
            color: #d8d8d8;
          }
        }
        .hidden-order {
          visibility: hidden;
        }
      }

      tbody:before {
        content: "-";
        display: block;
        line-height: 10px;
        color: transparent;
      }

      tbody {
        .no-student-response {
          color: #c0c0c0;
        }
        tr {
          border-bottom: 1px solid #e9e9e9;
          td {
            vertical-align: middle;
            padding: 10px 0px;
            &:nth-of-type(4), &:nth-of-type(5) {
              text-align: center;
            }
            input {
              display: none;
            }
            .student-retry-question {
              cursor: pointer;
              color: #00c2a2;
              font-size: 20px;
            }
          }
          .retry-question-cell {
            text-align: center;
            padding-left: 15px;
          }
         }
        tr:last-child {
          border-bottom: none;
        }
      }
    }
  }


  .student-submission-item-footer {
    height: 60px;
    padding: 10px 14px;
    background-color: #fafafa;
    border-top: solid 1px #e9e9e9;
    display: flex;
    justify-content: flex-end;
    align-items: center;

    .display-button {
      font-size: 14px;
      font-weight: bold;
      text-align: left;
      color: #ffffff;
      border: none;
      padding: 10px 22px;
      border-radius: 3px;
      outline: 0;
    }

    .show-prompt-button {
      font-size: 14px;
      font-weight: bold;
      text-align: left;
      color: #00c2a2;
      padding: 10px 60px;
      outline: 0;
      border: none;
      border-radius: 3px;
      background-color: #ffffff;
      border: solid 1px #00c2a2;
      cursor: pointer;
    }

    .active {
      background-color: #00c2a2;
      cursor: pointer;
    }

    .inactive {
      background-color: #e9e9e9;
      cursor: default;
    }

    i, p {
      color: #00c2a2;
    }

    p {
      margin-right: 15px;
      font-weight: 600;
      cursor: pointer;
    }

    i {
      font-size: 13px;
      margin-right: 5px;
      margin-top: 3px;
    }

  }
}

.script-container {
  li {
    margin-bottom: 15px;
  }
  .script-item {
    border-radius: 3px;
    background-color: #f9f9f9;
    font-size: 18px;
    padding: 15 30;
    width: 100%;
    margin-bottom: 20px;
    .script-item-heading {
      cursor: pointer;
      font-weight: bold;
    }
    hr {
      border: solid 1px #e9e9e9;
      margin: 15 0 20;
    }
    div ul {
      list-style-type: disc;
    }
  }
  .example-discussion {
    background-color: #fff8ed;
    hr {
      border: solid 1px rgba(245, 186, 91, 0.39);
    }
  }
  .card.is-fullwidth {
    margin-bottom: 20px;
  }

}

